src/objects/Milestone1_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Milestone1: This custom setting allows users to follow tasks automatically assigned to them.</description>
    <fields>
        <fullName>Auto_Follow_Complete_Task__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When a Task is marked &apos;Complete&apos;, Automatically unsubscribe the Assigned User from the Chatter Feed for the Task.</description>
        <inlineHelpText>When a Task is marked &apos;Complete&apos;, Automatically unsubscribe the Assigned User from the Chatter Feed for the Task.</inlineHelpText>
        <label>Auto UnFollow A Complete Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Follow_Task__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When a Task is Assigned to a User, automatically subscribe the user to follow the task.</description>
        <inlineHelpText>When a Task is Assigned to a User, automatically subscribe the user to follow the task.</inlineHelpText>
        <label>Auto Follow A Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Milestone_Task_Completion__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Marks the Milestone as complete if all children tasks are complete, and marks the child tasks as complete if the milestone is marked as complete.</description>
        <inlineHelpText>When enabled:

-If a milestone is complete, all of the tasks belonging to the milestone will be marked as complete.
-If all of the tasks belonging to a milestone are complete the milestone will be marked complete.</inlineHelpText>
        <label>Auto Milestone/Task Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Unfollow_Reassignment__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Automatically unsubscribe the currently assigned user from the task when it is reassigned to another user.</inlineHelpText>
        <label>Auto Unfollow Reassignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Milestone_Sort_Order__c</fullName>
        <description>Used to define the milestone sort order for the gantt chart.</description>
        <inlineHelpText>When Defining the sort order please input a coma separated value list using field API names. You may also define ascending or descending order by including ASC/DESC.

For example: Kickoff__c ASC, Deadline__c ASC, Name ASC

The above example will</inlineHelpText>
        <label>Custom Milestone Sort Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Task_Sort_Order__c</fullName>
        <description>Used to define the sort order of the gantt chart.</description>
        <inlineHelpText>When Defining the sort order please input a coma separated value list using field API names. You may also define ascending or descending order by including ASC/DESC.

For example: Start_Date__c ASC, Due_Date__c ASC, Name ASC</inlineHelpText>
        <label>Custom Task Sort Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default_Milestone_Alias__c</fullName>
        <description>Default milestone for email to task.</description>
        <inlineHelpText>Insert a valid alias milestone by default to receive the mail about task&apos;s creation when a alias is not specified in the mail&apos;s subject.</inlineHelpText>
        <label>Default Milestone Alias</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id_Blocked_Tasks_by_Project__c</fullName>
        <label>Report Id: Blocked Tasks by Project</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id_My_Blocked_Tasks__c</fullName>
        <label>Report Id: My Blocked Tasks</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id_My_Late_Tasks__c</fullName>
        <label>Report Id: My Late Tasks</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id_My_Tasks_By_Priority_Project__c</fullName>
        <label>Report Id: My Tasks By Priority, Project</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id_My_Tasks_By_Project_Milesto__c</fullName>
        <label>Report Id: My Tasks By Project + Milesto</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id_My_tasks_by_project__c</fullName>
        <inlineHelpText>Report to use for showing my tasks by project.  pv0 = project id (15 char) and pv1 = Assign to name.</inlineHelpText>
        <label>Report Id: My tasks by project</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id_Open_Task_Status_by_Project__c</fullName>
        <label>Report Id: Open Task Status by Project</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id_Overdue_Tasks_by_Project__c</fullName>
        <label>Report Id: Overdue Tasks by Project</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id_Project_Milestone_Open_Task__c</fullName>
        <label>Report Id: Project, Milestone, Open Task</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id_Project_Report__c</fullName>
        <description>ID of the report used for the &apos;Project Report&apos; button.</description>
        <inlineHelpText>Please input the ID of the report that will be directed to when clicking the &apos;Project Report&apos; button on the project page.</inlineHelpText>
        <label>Report Id: Project Report</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id_Task_Status_By_Project__c</fullName>
        <label>Report Id: Task Status By Project</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Milestone1 Settings</label>
</CustomObject>